# fast-search

./: .gitignore  CMakeLists.txt  README.md
installer/: LICENSE.txt  build_installer.ps1  fastsearch.iss  readme-before-install.txt
res/: build_icon.py
src/: server_main.cpp
src/cli/: cli_main.cpp
src/core/: config.cpp  config.h  database.cpp  database.h  indexer.cpp  indexer.h  pinyin.h  searcher.cpp  searcher.h  watcher.cpp  watcher.h
src/gui/: fastsearch.rc  gui_main.cpp  resource.h
src/platform/: platform.h  platform_linux.cpp  platform_macos.cpp  platform_win.cpp
src/server/: api_routes.cpp  api_routes.h  http_server.cpp  http_server.h
